--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
