--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.18",
+    "@mui/x-date-pickers": "^7.5.0",
+    "@mui/x-date-pickers-pro": "^7.5.0",
     "@reduxjs/toolkit": "^2.2.5",
+    "dayjs": "^1.11.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
