Created authorisation via Google.

--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@mui/material": "^5.15.18",
     "@mui/x-date-pickers": "^7.5.0",
     "@mui/x-date-pickers-pro": "^7.5.0",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.5",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.11",
+    "gapi-script": "^1.2.0",
+    "google": "^2.1.0",
+    "google-login": "^2.1.7",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
