--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@assets/*": ["./assets/*"],
       "@modules/*": ["./modules/*"],
       "@components/*": ["./components/*"],
-      "@shared/*": ["./shared/*"]
+      "@shared/*": ["./shared/*"],
+      "@store/*": ["./store/*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
